# trg_utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml  docs.yaml  lint.yaml  release.yaml
docs/: conf.py  decomp.rst  index.rst  merge.rst  mps.rst  projector.rst
projector_utils/: __init__.py  decomp.py  legmerge.py  merge.py
tests/: conftest.py  test_decomp.py  test_group.py  test_index.py  test_merge.py  test_mps.py  test_projector.py
trg_utils/: __init__.py  _index.py  decomp.py  merge.py  mps.py  projector.py
